--- a/C2_RazorPage/Pages/Movies/Director_Movie.cshtml
+++ b/C2_RazorPage/Pages/Movies/Director_Movie.cshtml
@@ -57,7 +57,9 @@
                                 @star.FullName <br />
                         }
                         </td>
-                        <td> <a href="./Director_Movie?deleteId=@movie.Id&&id=@movie.Director.Id">Delete</a></td>
+                        <td> <a href="./Director_Movie?deleteId=@movie.Id&&id=@movie.Director.Id">Delete</a>
+                            <a href="./Edit?idEdit=@movie.Id">Edit</a>
+                        </td>
                     </tr>
                 }
                 
