--- a/Asm3/Pages/Add.cshtml
+++ b/Asm3/Pages/Add.cshtml
@@ -2,3 +2,20 @@
 @model Asm3.Pages.AddModel
 @{
 }
+<h1>Add customer</h1>
+<form method="post">
+    <div>CustomerID</div>
+    <input type="text" name="cusId" />
+    <div>CustomerName</div> 
+    <input type="text" name="cusname" />
+    <div>Address</div>
+    <input type="text" name="address" />
+    <div>Phone</div>
+    <input type="text" name="phone" />
+    <div>DiscountRate</div>
+    <input type="number" name="discount" />
+
+    <div>
+        <button type="submit">Save</button>
+    </div>
+</form>
